# ROS2pendulum

./: .gitattributes  .gitignore  README.md
control/: CMakeLists.txt  package.xml
control/control/: __init__.py  state_space_controller.py
control/launch/: state_space_controller.launch.py
install/: local_setup.sh  setup.sh
install/scara/share/scara/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scara/share/scara/cmake/: scaraConfig-version.cmake  scaraConfig.cmake
install/scara/share/scara/launch/: view.launch.py
install/scara/share/scara/meshes/: carro.STL  pendulo.STL  riel.STL
install/scara/share/scara/rviz/: urdf.rviz  view.rviz
install/scara/share/scara/urdf/: description.xacro
install/scara_gz/share/scara_gz/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scara_gz/share/scara_gz/cmake/: scara_gzConfig.cmake
install/scara_gz/share/scara_gz/config/: bridge_config.yaml  bridge_parameters.yaml  gz_controller.yaml
install/scara_gz/share/scara_gz/launch/: sim.launch.py
log/: latest_build
scara/: CMakeLists.txt  package.xml
scara/launch/: view.launch.py
scara/rviz/: urdf.rviz
scara/src/: pendulum_simulator.py
scara/urdf/: description.xacro
scara_gz/: CMakeLists.txt  package.xml
scara_gz/config/: bridge_config.yaml  gz_controller.yaml
scara_gz/launch/: sim.launch.py
scara_gz/urdf/: gz.xacro
scara_moveit/: .setup_assistant  CMakeLists.txt  package.xml
scara_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  scara.ros2_control.xacro  scara.srdf  scara.urdf.xacro
scara_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+3 files in other folders)
